implement lazy load

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* Example of how to fade our content in */
+
+.LazyLoad {
+    opacity: 0;
+    transition: all 1s ease-in-out;
+  }
+  
+  .is-visible {
+    opacity: 1;
+  }
